--- a/app/views/lessons/lesson010.html.haml
+++ b/app/views/lessons/lesson010.html.haml
@@ -199,8 +199,20 @@
 %img(src='/lesson010/z022.png')
 
 %p In the security_credential page, I clicked link:
-%p   "Access keys (access key ID and secret access key)"
+%p "Access keys (access key ID and secret access key)"
 
+%p I clicked Blue-Button: "Create New Access Key"
+
+%p It displayed the key and gave me an opportunity to download a file containing the key:
+
+%p
+%img(src='/lesson010/z023.png')
+
+%p I downloaded the key-file and copied it to this folder in my laptop:
+
+.syntax
+  %pre
+    %code.bash ~/.ssh/rootkey.csv
 
 %p Next, I visited this URL:
 
