--- a/app/views/lessons/index.html.haml
+++ b/app/views/lessons/index.html.haml
@@ -17,4 +17,6 @@
   %li  Lesson 008 [ Under Construction ]
   %li
     %a(href='/lessons/lesson009') Lesson 009 [ Simple Docker Introductory Tutorial ]
+  %li
+    %a(href='/lessons/lesson010') Lesson 010 [ AWS EC2, AWS CLI Intro ]
 
