--- a/app/views/lessons/lesson010.html.haml
+++ b/app/views/lessons/lesson010.html.haml
@@ -402,6 +402,8 @@ I looked for the security group attached to "PublicIpAddress": "34.223.225.17"
 
 %a(href='https://console.aws.amazon.com/ec2' target='x')
   https://console.aws.amazon.com/ec2
+%p
+%img(src='/lesson010/z024.png')
 
 %p Also I removed all keys which are listed in this document:
 
