--- a/app/views/lessons/lesson010.html.haml
+++ b/app/views/lessons/lesson010.html.haml
@@ -15,7 +15,7 @@
   %img(src='/lesson010/z011.png')
 
 %hr/
-%p This lesson shows how I worked some simple AWS CLI tasks.
+%p This lesson shows how I worked through some simple AWS CLI tasks.
 
 %p To start, I Signed-Up for an AWS account.
 
