--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -1,4 +1,11 @@
 %h1#top Lesson 011 [ Simple AWS Redshift Intro. ]
 
 %p AWS Redshift is a database service.
+
+%p This service runs in a cluster configured by you the operator.
+
+%p The cluster offers higher reliability and sometimes better performance than a single-node database service.
+
+%p This lesson shows how I worked through some simple AWS Redshift tasks.
+
 %hr/
