--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -4,7 +4,11 @@
 
 %p This service runs in a cluster configured by you the operator.
 
-%p The cluster offers higher reliability and sometimes better performance than a single-node database service.
+%p The cluster offers higher reliability and sometimes better performance than a single-node database service:
+
+%a(href='https://docs.aws.amazon.com/redshift' target='x')
+  https://docs.aws.amazon.com/redshift
+  
 
 %p This lesson shows how I worked through some simple AWS Redshift tasks.
 
