--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -12,4 +12,13 @@
 
 %p This lesson shows how I worked through some simple AWS Redshift tasks.
 
+%p To start, I Signed-Up for an AWS account.
+
+%p I saw a Sign-Up button at this URL:
+
+%a(href='https://aws.amazon.com' target='x')
+  https://aws.amazon.com
+%p
+%img(src='/lesson011/z012.png')
+
 %hr/
