--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -21,4 +21,20 @@
 %p
 %img(src='/lesson011/z012.png')
 
+%p After I signed-up and logged-in, using a link in the upper right, I set my region to Oregon:
+
+%p
+%img(src='/lesson011/z013.png')
+%hr/
+
+
+
+%p I know that the Oregon region also has these names:
+%ul
+  %li Oregon
+  %li US West (Oregon)
+  %li us-west-2
+
+%p The last name, "us-west-2", is important to remember.
+
 %hr/
