--- a/app/views/lessons/lesson010.html.haml
+++ b/app/views/lessons/lesson010.html.haml
@@ -52,12 +52,12 @@
 
 %p I, however, have no proof that is true.
 
-%p After I set my region to us-west-2, I visit this URL again:
+%p After I set my region to us-west-2, I visited this URL again:
 
 %a(href='https://console.aws.amazon.com/ec2' target='x')
   https://console.aws.amazon.com/ec2
 
-%p AWS serves me a page called EC2 Dashboard.
+%p AWS served me a page called EC2 Dashboard.
 
 %p I saw this:
 
