--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -37,4 +37,19 @@
 
 %p The last name, "us-west-2", is important to remember.
 
+%p After I set my region to us-west-2, I visited this URL:
+
+%a(href='https://console.aws.amazon.com/redshift' target='x')
+  https://console.aws.amazon.com/redshift
+  
+%p AWS served me a page called Redshift Dashboard.
+
+%p I saw this:
+
+%p
+%img(src='/lesson011/z014.png')
+%hr/
+
+
+
 %hr/
