--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -46,9 +46,27 @@
 
 %p I saw this:
 
-%p
 %img(src='/lesson011/z014.png')
-%hr/
+
+%p I clicked blue-button: "Quick launch cluster".
+
+%p AWS served me a form:
+
+%img(src='/lesson011/z015.png')
+
+%p I typed in a password for future connections:
+
+.syntax
+  %pre
+    %code Dan12345
+
+%p The option-field "Available IAM roles" was asking me to create a new IAM-Role.
+
+%p I opened a another tab.
+
+%p I visited URL:
+
+%p 
 
 
 
