--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -66,7 +66,22 @@
 
 %p I visited URL:
 
-%p 
+%a(href='https://console.aws.amazon.com/iam/home#/roles' target='x')
+  https://console.aws.amazon.com/iam/home#/roles
+  
+%p I saw this:
+
+%img(src='/lesson011/z016.png')
+
+%p I clicked blue-button: "Create role".
+
+%p AWS served a page asking me a question:
+
+%p Choose the service that will use this role
+
+%p The page I saw:
+
+%img(src='/lesson011/z016.png')
 
 
 
