--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -81,7 +81,22 @@
 
 %p The page I saw:
 
-%img(src='/lesson011/z016.png')
+%img(src='/lesson011/z017.png')
+
+%p I answered by clicking the blue-Redshift link near lower right.
+
+
+%p AWS served a page asking me a question:
+
+%p Select your use case
+
+%p The page I saw:
+
+%img(src='/lesson011/z018.png')
+
+%p I answered by clicking the blue-link: "Redshift - Customizable".
+
+
 
 
 
