--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -96,7 +96,7 @@
 
 %p I answered by clicking the blue-link: "Redshift - Customizable".
 
-
+%p AWS highlighted my choice and activated blue-button: "Next: Permissions"
 
 
 
