--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -98,6 +98,24 @@
 
 %p AWS highlighted my choice and activated blue-button: "Next: Permissions"
 
+%p AWS served me page 2 from a wizard.
+
+%p I typed "s3" into the search field.
+
+%p AWS then allowed me to select this permission: "AmazonS3ReadOnlyAccess".
+
+%p I saw this:
+
+%img(src='/lesson011/z019.png')
+
+%p I clicked blue-button: "Next: Review".
+
+%p AWS served me page 3 from a wizard asking me to name the Role I want.
+
+%p I typed: "aRedshiftRole" and saw this:
+
+%img(src='/lesson011/z020.png')
+
 
 
 %hr/
