--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -116,6 +116,24 @@
 
 %img(src='/lesson011/z020.png')
 
+%p I clicked blue-button: "Create Role".
+
+%p AWS created the role and served me Role-list page:
+
+%img(src='/lesson011/z021.png')
+
+%p I clicked blue-button: "aRedshiftRole".
+
+%p AWS showed the Amazon-Role-Name (ARN) of "aRedshiftRole" to be this string:
+
+.syntax
+  %pre
+    %code arn:aws:iam::448496253599:role/aRedshiftRole
+
+%p The page I saw is displayed below:
+
+%img(src='/lesson011/z022.png')
+
 
 
 %hr/
