--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -134,6 +134,19 @@
 
 %img(src='/lesson011/z022.png')
 
+%p I returned my attention to the Redshift-configuration page which needs "aRedshiftRole":
+
+%img(src='/lesson011/z023.png')
+
+%p I selected the option "aRedshiftRole":
+
+%img(src='/lesson011/z024.png')
+
+%p I clicked blue-button: "Launch Cluster".
+
+%p AWS served me a page:
+
+%img(src='/lesson011/z025.png')
 
 
 %hr/
