--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -148,5 +148,23 @@
 
 %img(src='/lesson011/z025.png')
 
+%p After 5 minutes I visited a Redshift URL:
+
+%a(href='https://console.aws.amazon.com/redshift' target='x')
+  https://console.aws.amazon.com/redshift
+  
+%p Eventually I found the URL of the configuration page:
+
+%a(href='https://us-west-2.console.aws.amazon.com/redshift/home?region=us-west-2#cluster-details:cluster=redshift-cluster-1' target='x')
+  https://us-west-2.console.aws.amazon.com/redshift/home?region=us-west-2#cluster-details:cluster=redshift-cluster-1
+
+
+%p I saw this:
+
+%img(src='/lesson011/z026.png')
+
+%p I wanted to open port 5439 into the cluster.
+
+%p In the configuration page I clicked link: "sg-b0e2acc3" which was the link to VPC security groups.
 
 %hr/
