--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -163,8 +163,14 @@
 
 %img(src='/lesson011/z026.png')
 
-%p I wanted to open port 5439 into the cluster.
+%p During my wait for cluster-creation, I wanted to open port 5439 into the cluster.
 
 %p In the configuration page I clicked link: "sg-b0e2acc3" which was the link to VPC security groups.
+
+%p AWS served me a configuration page:
+
+%img(src='/lesson011/z027.png')
+
+
 
 %hr/
