--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -171,6 +171,24 @@
 
 %img(src='/lesson011/z027.png')
 
+%p Opening port 5439 was easy:
+
+%ul
+  %li I clicked the Inbound tab. 
+  %li I clicked button: "Edit"
+  %li I clicked button: "Add Rule"
+  %li I entered the following:
+  %li
+    %ul
+      %li Type: Custom TCP Rule.
+      %li Protocol: TCP.
+      %li Port Range: 5439
+      %li Source: select Custom IP, then type 0.0.0.0/0.
+  %li
+    %img(src='/lesson011/z028.png')
+  %li I clicked Save.
+
+
 
 
 %hr/
