--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -188,7 +188,75 @@
     %img(src='/lesson011/z028.png')
   %li I clicked Save.
 
+%p I returned to the Redshift URL to check the status of my cluster:
 
+%a(href='https://console.aws.amazon.com/redshift' target='x')
+  https://console.aws.amazon.com/redshift
+
+%p I found the configuration page and saw this:
+
+%img(src='/lesson011/z029.png')
+
+%p I made note of the jdbc connect string:
+
+.syntax
+  %pre
+    %code jdbc:redshift://redshift-cluster-1.cmea74qjjc8h.us-west-2.redshift.amazonaws.com:5439/dev
+
+%p I asked google how to connect with Postgres-CLI named: "psql".
+
+%p The google-answer:
+
+.syntax
+  %pre
+    %code psql -h endpoint -U userid -d databasename -p port
+
+
+%p I checked my Ubuntu laptop for psql:
+
+.syntax
+  %pre
+    %code
+      which psql
+      psql --help
+
+%p I did not see psql so I installed it:
+
+.syntax
+  %pre
+    %code sudo apt install postgresql
+
+%p Next, I tried a simple shell command:
+
+.syntax
+  %pre
+    %code psql -h redshift-cluster-1.cmea74qjjc8h.us-west-2.redshift.amazonaws.com -U awsuser -d dev -p 5439
+
+%p It worked, I saw this:
+
+.syntax
+  %pre
+    %code
+      dan@d81:~ $ psql -h redshift-cluster-1.cmea74qjjc8h.us-west-2.redshift.amazonaws.com -U awsuser -d dev -p 5439
+      Password for user awsuser: 
+      psql (9.5.14, server 8.0.2)
+      SSL connection (protocol: TLSv1.2, cipher: ECDHE-RSA-AES256-GCM-SHA384, bits: 256, compression: off)
+      Type "help" for help.
+      dev=# 
+
+%p I tested it further with SQL commands:
+
+.syntax
+  %pre
+    =render 'lesson011a'
+
+%p Next, I tried to run a sql script.
+
+%p The script is listed below:
+
+.syntax
+  %pre
+    =render 'lesson011b'
 
 
 %hr/
