--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -265,4 +265,19 @@
     =render 'lesson011c'
 
 
+%p Next, I ran another sql script.
+
+%p The script is listed below:
+
+.syntax
+  %pre
+    =render 'lesson011d'
+
+%p I saw this:
+
+.syntax
+  %pre
+    =render 'lesson011e'
+
+
 %hr/
