--- a/app/views/lessons/_lesson011d.html.erb
+++ b/app/views/lessons/_lesson011d.html.erb
@@ -1,4 +1,9 @@
 <code class='bash'>
+-- ur.sql
+
+-- Ref:
+-- https://docs.aws.amazon.com/redshift/latest/gsg/rs-gsg-create-sample-db.html
+
 copy users from 's3://awssampledbuswest2/tickit/allusers_pipe.txt' 
 credentials 'aws_iam_role=arn:aws:iam::448496253599:role/aRedshiftRole'
 delimiter '|' region 'us-west-2';
@@ -25,5 +30,5 @@ delimiter '|' region 'us-west-2';
 
 copy sales from 's3://awssampledbuswest2/tickit/sales_tab.txt'
 credentials 'aws_iam_role=arn:aws:iam::448496253599:role/aRedshiftRole'
-		delimiter '\t' timeformat 'MM/DD/YYYY HH:MI:SS' region 'us-west-2';
+delimiter '\t' timeformat 'MM/DD/YYYY HH:MI:SS' region 'us-west-2';
 </code>
