--- a/app/views/lessons/_lesson011e.html.erb
+++ b/app/views/lessons/_lesson011e.html.erb
@@ -1,2 +1,21 @@
 <code class='bash'>
+dan@d81:~ $ psql -h redshift-cluster-1.cmea74qjjc8h.us-west-2.redshift.amazonaws.com -U awsuser -d dev -p 5439 -f ur.sql
+Password for user awsuser: 
+psql:ur.sql:8: INFO:  Load into table 'users' completed, 49990 record(s) loaded successfully.
+COPY
+psql:ur.sql:12: INFO:  Load into table 'venue' completed, 202 record(s) loaded successfully.
+COPY
+psql:ur.sql:16: INFO:  Load into table 'category' completed, 11 record(s) loaded successfully.
+COPY
+psql:ur.sql:20: INFO:  Load into table 'date' completed, 365 record(s) loaded successfully.
+COPY
+psql:ur.sql:24: INFO:  Load into table 'event' completed, 8798 record(s) loaded successfully.
+COPY
+psql:ur.sql:28: INFO:  Load into table 'listing' completed, 192497 record(s) loaded successfully.
+COPY
+psql:ur.sql:32: INFO:  Load into table 'sales' completed, 172456 record(s) loaded successfully.
+COPY
+dan@d81:~ $ 
+dan@d81:~ $ 
+dan@d81:~ $
 </code>
