--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -279,5 +279,19 @@
   %pre
     =render 'lesson011e'
 
+%p finally, I ran another sql script.
+
+%p The script is listed below:
+
+.syntax
+  %pre
+    =render 'lesson011f'
+
+%p I saw this:
+
+.syntax
+  %pre
+    =render 'lesson011g'
+
 
 %hr/
