--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -293,5 +293,11 @@
   %pre
     =render 'lesson011g'
 
+%p The above output convinced me that my Redshift cluster was behaving well.
 
+%p The Redshift service is expensive so I shut it down:
+
+%img(src='/lesson011/z030.png')
+%hr
+%img(src='/lesson011/z031.png')
 %hr/
