--- a/app/views/lessons/index.html.haml
+++ b/app/views/lessons/index.html.haml
@@ -18,5 +18,7 @@
   %li
     %a(href='/lessons/lesson009') Lesson 009 [ Simple Docker Introductory Tutorial ]
   %li
-    %a(href='/lessons/lesson010') Lesson 010 [ AWS EC2, AWS CLI Intro ]
+    %a(href='/lessons/lesson010') Lesson 010 [ AWS EC2, AWS CLI Intro. ]
+  %li
+    %a(href='/lessons/lesson011') Lesson 011 [ Simple AWS Redshift Intro. ]
 
