--- a/app/views/lessons/lesson011.html.haml
+++ b/app/views/lessons/lesson011.html.haml
@@ -267,7 +267,8 @@
 
 %p Next, I ran another sql script.
 
-%p The script is listed below:
+%p The script is listed below.
+%p Notice that the script refers to the Amazon Role Name I had created earlier:
 
 .syntax
   %pre
@@ -279,7 +280,7 @@
   %pre
     =render 'lesson011e'
 
-%p finally, I ran another sql script.
+%p Finally, I ran another sql script.
 
 %p The script is listed below:
 
